--- a/AoC-2021-Automne/AoC-2021-Automne.vcxproj
+++ b/AoC-2021-Automne/AoC-2021-Automne.vcxproj
@@ -145,6 +145,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Day-01.hpp" />
+    <ClInclude Include="Day-02.hpp" />
+    <ClInclude Include="template.hpp" />
     <ClInclude Include="Utility.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
