--- a/AoC-2021-Automne/AoC-2021-Automne.vcxproj.filters
+++ b/AoC-2021-Automne/AoC-2021-Automne.vcxproj.filters
@@ -26,5 +26,11 @@
     <ClInclude Include="Utility.hpp">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="Day-02.hpp">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="template.hpp">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
